# c_fortran_example

./: .gitignore  CMakeLists.txt
c_prj/: CMakeLists.txt
c_prj/inc/: src_1.h
fortran_prj/: CMakeLists.txt  c_interface.f90  module_1.f90  module_2.f90
main/: CMakeLists.txt  main.c
main/c_prj/: CMakeLists.txt  src_1.c  src_2.c
main/c_prj/inc/: src_2.h
main/inc/: c_interface.h
